// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AccountHealthCard should match snapshot in loading state 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1j74uew-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        Account Health
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body2 css-2iyr4a-MuiTypography-root"
      >
        Loading...
      </p>
    </div>
  </div>
</div>
`;

exports[`AccountHealthCard should match snapshot with full data 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1j74uew-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1m7rp8n-MuiTypography-root"
      >
        Account Health
      </h6>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-3 css-1nlx18k-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-6 MuiGrid-grid-md-3 css-19vcg0t-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-xi606m"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 css-i3raj5-MuiTypography-root"
            >
              150
            </h4>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
            >
              Total Accounts
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-6 MuiGrid-grid-md-3 css-19vcg0t-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-xi606m"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 css-j63gh9-MuiTypography-root"
            >
              100
            </h4>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
            >
              Active (
              67
              %)
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-6 MuiGrid-grid-md-3 css-19vcg0t-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-xi606m"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 css-10r2qqu-MuiTypography-root"
            >
              30
            </h4>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
            >
              Inactive
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-6 MuiGrid-grid-md-3 css-19vcg0t-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-xi606m"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 css-2y9ydt-MuiTypography-root"
            >
              20
            </h4>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
            >
              At Risk (
              13
              %)
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root css-zflzca"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-1bub9p-MuiTypography-root"
        >
          Average Engagement Score
        </p>
        <h3
          class="MuiTypography-root MuiTypography-h3 css-96rs8p-MuiTypography-root"
        >
          75
        </h3>
        <span
          class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
        >
          out of 100
        </span>
      </div>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-4ns8za-MuiTypography-root"
      >
        Risk Distribution
      </h6>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-zjhuaj-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-0"
          >
            <div
              class="MuiBox-root css-1gh5laf"
            >
              <div
                class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-filledSuccess css-10iq40h-MuiChip-root"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorSuccess css-1umw9bq-MuiSvgIcon-root"
                  data-testid="CheckCircleIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
                  />
                </svg>
                <span
                  class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                >
                  Low Risk
                </span>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
              >
                90
                 accounts (
                60
                %)
              </p>
            </div>
            <span
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="60"
              class="MuiLinearProgress-root MuiLinearProgress-colorSuccess MuiLinearProgress-determinate css-l59h16-MuiLinearProgress-root"
              role="progressbar"
            >
              <span
                class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorSuccess MuiLinearProgress-bar1Determinate css-1c6qn6j-MuiLinearProgress-bar1"
                style="transform: translateX(-40%);"
              />
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-0"
          >
            <div
              class="MuiBox-root css-1gh5laf"
            >
              <div
                class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorWarning MuiChip-filledWarning css-6f6bgo-MuiChip-root"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorWarning css-1umw9bq-MuiSvgIcon-root"
                  data-testid="WarningIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M1 21h22L12 2zm12-3h-2v-2h2zm0-4h-2v-4h2z"
                  />
                </svg>
                <span
                  class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                >
                  Medium Risk
                </span>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
              >
                40
                 accounts (
                27
                %)
              </p>
            </div>
            <span
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="27"
              class="MuiLinearProgress-root MuiLinearProgress-colorWarning MuiLinearProgress-determinate css-1e2bh1r-MuiLinearProgress-root"
              role="progressbar"
            >
              <span
                class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorWarning MuiLinearProgress-bar1Determinate css-iwrlqk-MuiLinearProgress-bar1"
                style="transform: translateX(-73%);"
              />
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-0"
          >
            <div
              class="MuiBox-root css-1gh5laf"
            >
              <div
                class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorError MuiChip-filledError css-19grb1q-MuiChip-root"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorError css-1umw9bq-MuiSvgIcon-root"
                  data-testid="ErrorIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
                  />
                </svg>
                <span
                  class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                >
                  High Risk
                </span>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
              >
                20
                 accounts (
                13
                %)
              </p>
            </div>
            <span
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="13"
              class="MuiLinearProgress-root MuiLinearProgress-colorError MuiLinearProgress-determinate css-oa36v9-MuiLinearProgress-root"
              role="progressbar"
            >
              <span
                class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorError MuiLinearProgress-bar1Determinate css-13x3ir3-MuiLinearProgress-bar1"
                style="transform: translateX(-87%);"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccountHealthCard should match snapshot with zero accounts 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1j74uew-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1m7rp8n-MuiTypography-root"
      >
        Account Health
      </h6>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-3 css-1nlx18k-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-6 MuiGrid-grid-md-3 css-19vcg0t-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-xi606m"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 css-i3raj5-MuiTypography-root"
            >
              0
            </h4>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
            >
              Total Accounts
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-6 MuiGrid-grid-md-3 css-19vcg0t-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-xi606m"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 css-j63gh9-MuiTypography-root"
            >
              0
            </h4>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
            >
              Active (
              0
              %)
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-6 MuiGrid-grid-md-3 css-19vcg0t-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-xi606m"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 css-10r2qqu-MuiTypography-root"
            >
              0
            </h4>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
            >
              Inactive
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-6 MuiGrid-grid-md-3 css-19vcg0t-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-xi606m"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 css-2y9ydt-MuiTypography-root"
            >
              0
            </h4>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
            >
              At Risk (
              0
              %)
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root css-zflzca"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-1bub9p-MuiTypography-root"
        >
          Average Engagement Score
        </p>
        <h3
          class="MuiTypography-root MuiTypography-h3 css-96rs8p-MuiTypography-root"
        >
          0
        </h3>
        <span
          class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
        >
          out of 100
        </span>
      </div>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-4ns8za-MuiTypography-root"
      >
        Risk Distribution
      </h6>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-zjhuaj-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-0"
          >
            <div
              class="MuiBox-root css-1gh5laf"
            >
              <div
                class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-filledSuccess css-10iq40h-MuiChip-root"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorSuccess css-1umw9bq-MuiSvgIcon-root"
                  data-testid="CheckCircleIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
                  />
                </svg>
                <span
                  class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                >
                  Low Risk
                </span>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
              >
                0
                 accounts (
                0
                %)
              </p>
            </div>
            <span
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="0"
              class="MuiLinearProgress-root MuiLinearProgress-colorSuccess MuiLinearProgress-determinate css-l59h16-MuiLinearProgress-root"
              role="progressbar"
            >
              <span
                class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorSuccess MuiLinearProgress-bar1Determinate css-1c6qn6j-MuiLinearProgress-bar1"
                style="transform: translateX(-100%);"
              />
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-0"
          >
            <div
              class="MuiBox-root css-1gh5laf"
            >
              <div
                class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorWarning MuiChip-filledWarning css-6f6bgo-MuiChip-root"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorWarning css-1umw9bq-MuiSvgIcon-root"
                  data-testid="WarningIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M1 21h22L12 2zm12-3h-2v-2h2zm0-4h-2v-4h2z"
                  />
                </svg>
                <span
                  class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                >
                  Medium Risk
                </span>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
              >
                0
                 accounts (
                0
                %)
              </p>
            </div>
            <span
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="0"
              class="MuiLinearProgress-root MuiLinearProgress-colorWarning MuiLinearProgress-determinate css-1e2bh1r-MuiLinearProgress-root"
              role="progressbar"
            >
              <span
                class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorWarning MuiLinearProgress-bar1Determinate css-iwrlqk-MuiLinearProgress-bar1"
                style="transform: translateX(-100%);"
              />
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-0"
          >
            <div
              class="MuiBox-root css-1gh5laf"
            >
              <div
                class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorError MuiChip-filledError css-19grb1q-MuiChip-root"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorError css-1umw9bq-MuiSvgIcon-root"
                  data-testid="ErrorIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
                  />
                </svg>
                <span
                  class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                >
                  High Risk
                </span>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
              >
                0
                 accounts (
                0
                %)
              </p>
            </div>
            <span
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="0"
              class="MuiLinearProgress-root MuiLinearProgress-colorError MuiLinearProgress-determinate css-oa36v9-MuiLinearProgress-root"
              role="progressbar"
            >
              <span
                class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorError MuiLinearProgress-bar1Determinate css-13x3ir3-MuiLinearProgress-bar1"
                style="transform: translateX(-100%);"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
